Some refactors Mod checking on both sides improved Some documentation